src/test/deca/context/invalid/cond_if_but_int.deca
// Test la règle 3.29

{
    int cond = 5;
    if (cond){

    };
}

// Resultat:
//# TODOTEST  : rule 3.29
